terraform/modules/main/igw.tf
#インターネットゲートウェイ作成
resource "aws_internet_gateway" "webserver" {
  vpc_id = aws_vpc.webserver.id
  tags = merge(var.tag,{Name = "webserver-igw"})
}
